refs #78 - Fixed tables in overview to not overflow. Shrunk text inside tabs

--- a/timepiece/static/timepiece/css/style.css
+++ b/timepiece/static/timepiece/css/style.css
@@ -145,6 +145,9 @@ button {
     list-style-type: none;
 }
 
+#tabs tr, #tabs caption{
+    font-size: 90%;
+}
 /*th, td {
     padding: 0.2em; 
 }
